--- a/src/RealWorldFable.fsproj
+++ b/src/RealWorldFable.fsproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <WarningsAsErrors>FS0025</WarningsAsErrors>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <!-- BINDINGS -->
@@ -35,15 +34,15 @@
     <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Fable.Core" Version="3.1.2" />
-    <PackageReference Include="Fable.Elmish" Version="3.0.6" />
-    <PackageReference Include="Fable.Elmish.Browser" Version="3.0.2" />
-    <PackageReference Include="Fable.Elmish.Debugger" Version="3.0.3" />
-    <PackageReference Include="Fable.Elmish.HMR" Version="4.0.1" />
+    <PackageReference Include="Fable.Core" Version="3.2.5" />
+    <PackageReference Include="Fable.Elmish" Version="3.1.0" />
+    <PackageReference Include="Fable.Elmish.Browser" Version="3.0.4" />
+    <PackageReference Include="Fable.Elmish.Debugger" Version="3.2.0" />
+    <PackageReference Include="Fable.Elmish.HMR" Version="4.1.0" />
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
-    <PackageReference Include="Fable.React" Version="5.3.5" />
+    <PackageReference Include="Fable.React" Version="7.3.0" />
     <PackageReference Include="Fable.RemoteData" Version="1.0.2" />
-    <PackageReference Include="Fable.SimpleHttp" Version="2.6.0" />
-    <PackageReference Include="Thoth.Json" Version="3.4.1" />
+    <PackageReference Include="Fable.SimpleHttp" Version="2.7.0" />
+    <PackageReference Include="Thoth.Json" Version="3.5.0" />
   </ItemGroup>
 </Project>
